styles react button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     
     <!-- Load our React component. -->
     <script src="like_button.js"></script>
+    <script src="calculations.js"></script>
 
 
 </body>
